Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20629

QML app crash on exit due to threading problem (XmlListModel internals suspected)

    XMLWordPrintable

Details

    • 422f4e8ec53b917fad09a3e671fd93048dde72ed

    Description

      When using QML element XmlListModel, one starts to observe following warning on Qt Simulator when exiting the application:

      "QWaitCondition: Destroyed while threads are still waiting"

      When running on device, following error prints out on application exit:

      "QThread: Destroyed while thread is still running"

      We received MobileCrash reports from testing, and it seems the reported crashes and the above messages might be related. There seems to be something funny going on with internals of XmlListModel, perhaps namely its QDeclarativeXmlQuery. Please see the attached image to see the crash log. The actual error is:

      "
      Exit Type: Exception
      Exit Category: Exceptions
      Exit Reason: EExcDataAbort

      The thread has tried to read data from an invalid address. (EExcDataAbort=23)
      "

      Also, when taking a closer look at the QThread source code, there is a following comment:

      "
      #ifdef Q_OS_SYMBIAN
      // Check if thread still exists. Needed because kernel will kill it without notification
      // before global statics are deleted at application exit.
      "

      and you can see from the attached image that the QGlobalStaticDeleter is doing something with QDeclarativeXmlQuery.

      As far as I know, we are not doing any extra threading intentionally in the application. The SDK demo example called "rssnews" also outputs the error messages explained above, but unfortunately I have no crash logs for it.

      Br,

      Ville V.,
      Futurice

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bealam Bea Lam (closed Nokia identity) (Inactive)
            villev Ville V.
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes