Rework threading internals in XmlListModel to avoid global static

QTBUG-20629 reports a crash on destruction of XmlListModel when
cleaning up the global static for the QDeclarativeXmlQuery object.

The fix restructures the internals to be like the threading structure
used for QDeclarativePixmapReader which doesn't use a global static.

Task-number: QTBUG-20629
Reviewed-by: Martin Jones